--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.0",
     "react-scripts": "^3.4.4",
+    "react-toastify": "^8.1.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
   },
